--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,10 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900;1000&display=swap');
 
 body {
-    font-family: 'Tajawal', sans-serif !important;
+    font-family: 'Cairo', sans-serif !important;
 }
 
-
+header {
+    position: sticky !important;
+    top: 0 !important;
+    left: 0 !important;
+}
 
 .navbar-toggler {
 
@@ -16,40 +20,83 @@ body {
     box-shadow: none;
 }
 
-header nav ul li{
+header nav ul li a {
         font-size: 18px;
+        /*color: var(--bs-primary) !important;*/
 }
 
 .logo {
     width: 60px;
-
 }
 
-
-.gradient-right {
-    background-image: linear-gradient(to right , var(--bs-dark), var(--bs-warning));
-}
 
 section.landing-page {
     width: 100%;
-    min-height: calc(100vh - 91px);
-    background-image: url("../imgs/home-bg.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
     z-index: 1;
 }
 
-section.landing-page::before {
+.special-heading {
+    position: relative;
+    width: fit-content;
+    margin: auto;
+    padding: 15px 0;
+    cursor: pointer;
+    transition: .6s;
+    z-index: 1;
+    user-select: none;
+}
+
+.special-heading::before {
+    content: "";
+    width: 50%;
+    height: 2px;
+    background-color: var(--bs-dark);
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
+    transition: .6s;
+}
+
+
+
+.special-heading:hover::before {
+    width: 100%;
+}
+
+
+
+.statistics::before {
     content: "";
     width: 100%;
-    background-image: linear-gradient(to left , var(--bs-dark), var(--bs-secondary));
     height: 100%;
     position: absolute;
     left: 0;
     top: 0;
-    opacity: .85;
+    background-image: url("../imgs/abstract_shape01.png");
+    background-size: cover;
+    background-position: center;
+    opacity: 0.1;
     z-index: -1;
+
 }
+
+.statistics::after {
+    content: "";
+    width: 100%;
+    background-image: url("../imgs/hands.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0.3;
+    z-index: -1;
+    background-attachment: fixed;
+}
+
+
 
 .bg-header {
     height: 30vh;
@@ -88,3 +135,69 @@ section.landing-page::before {
     background-position: bottom;
     z-index: 333;
 }
+
+.mega-menu {
+    width: 100%;
+    position: absolute;
+    left: 0;
+    z-index: 999;
+    top: 96px;
+    right: 0;
+    background-color: #148287;
+}
+
+.mega-menu li {
+    overflow: hidden;
+
+}
+
+.mega-menu a {
+    color: #fff;
+    font-family: 'Changa' !important;
+}
+
+
+.shapedividers_com-7183{
+    overflow:hidden;
+    position:relative;
+}
+.shapedividers_com-7183::before{
+    content:'';
+    font-family:'shape divider from ShapeDividers.com';
+    position: absolute;
+    bottom: -1px;
+    left: -1px;
+    right: -1px;
+    top: -1px;
+    z-index: 3;
+    pointer-events: none;
+    background-repeat: no-repeat;
+    background-size: 100% 90px;
+    background-position: 50% 0%;
+    background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0.1 35.28 2.17" preserveAspectRatio="none"><path d="M0 1.85c2.56-.83 7.68-.3 11.79-.42 4.1-.12 6.86-.61 9.58-.28 2.73.33 5.61 1.17 8.61 1 3-.19 4.73-.82 5.3-.84V.1H0z" fill="%23c4e0e1"/></svg>');
+}
+
+@media (min-width:768px){
+    .shapedividers_com-7183::before{
+        background-size: 100% 90px;
+        background-position: 50% 0%;
+    }
+}
+
+@media (min-width:1025px){
+    .shapedividers_com-7183::before{
+        bottom: -0.1vw;
+        left: -0.1vw;
+        right: -0.1vw;
+        top: -0.1vw;
+        background-size: 100% 90px;
+        background-position: 50% 0%;
+        background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0.1 35.28 2.17" preserveAspectRatio="none"><path d="M0 1.85c2.56-.83 7.68-.3 11.79-.42 4.1-.12 6.86-.61 9.58-.28 2.73.33 5.61 1.17 8.61 1 3-.19 4.73-.82 5.3-.84V.1H0z" fill="%23c4e0e1"/></svg>');
+    }
+}
+@media (min-width:2100px){
+    .shapedividers_com-7183::before{
+        background-size: 100% calc(2vw + 90px);
+    }
+}
+
