--- a/public/css/master.css
+++ b/public/css/master.css
@@ -72,7 +72,12 @@ body {
 header {
     position: sticky !important;
     top: 0 !important;
+
     left: 0 !important;
+}
+
+header nav {
+    min-height: 65px !important;
 }
 
 .navbar-toggler {
@@ -91,13 +96,13 @@ header nav ul li a {
 }
 
 .logo {
-    height: 60px;
+    height: 55px;
 }
 
 
 .hero-section {
-    min-height: 40vh;
-    background-image: url("https://webheady.com/Charity-sympathy/images/slider/1.jpg");
+
+    /*background-image: url("https://webheady.com/Charity-sympathy/images/slider/1.jpg");*/
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -106,37 +111,29 @@ header nav ul li a {
 }
 
 .hero-section .container {
-    min-height: 40vh;
+    min-height: 70vh;
 }
 
-.hero-section::after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    background-color: rgba(0, 0, 0, 0.6);
-    z-index: -1;
-
-
+.hero-section img {
+    filter: blur(3px);
 }
 
 
-.hero-section::before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    background-image: url("../imgs/pattern.svg");
-    background-size: cover;
-    background-position: center;
-    opacity: 0.1;
-    z-index: -1;
 
-}
+/*.hero-section::before {*/
+/*    content: "";*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    position: absolute;*/
+/*    left: 0;*/
+/*    top: 0;*/
+/*    background-image: url("../imgs/pattern.svg");*/
+/*    background-size: cover;*/
+/*    background-position: center;*/
+/*    opacity: 0.1;*/
+/*    z-index: -1;*/
+
+/*}*/
 
 .special-heading {
     position: relative;
@@ -199,31 +196,26 @@ header nav ul li a {
     background-attachment: fixed;
 }
 
-.active {
-    margin-left: 15px;
-    margin-right: 15px;
-    padding: 5px 20px;
+/*.active {*/
+/*    margin-left: 15px;*/
+/*    margin-right: 15px;*/
+/*    padding: 5px 20px;*/
 
-    border-radius: 30px;
-    background-image: linear-gradient(to left,#49B649, var(--bs-primary));
-}
+/*    border-radius: 30px;*/
+/*    background-image: linear-gradient(to left,#49B649, var(--bs-primary));*/
+/*}*/
 
-.active .nav-link {
-    font-size: 18px;
-    font-weight: 500;
-    color: #fff !important;
-}
-
-
-
-
-
-
-
+/*.active .nav-link {*/
+/*    font-size: 18px;*/
+/*    font-weight: 500;*/
+/*    color: #fff !important;*/
+/*}*/
 
 
 .category-overlay {
     z-index: 3;
+    background-position: center;
+    background-size: cover;
     position: relative;
 }
 
@@ -231,12 +223,23 @@ header nav ul li a {
     content: '';
     width: 100%;
     height: 100%;
-    background-color: var(--bs-primary);
+    background-color: var(--category-color);
     position: absolute;
     top: 0;
     left: 0;
     z-index: 2;
-    opacity: .6;
-    border-radius: 2rem;
+    opacity: .5;
 }
 
+.active {
+    color: var(--bs-primary) !important;
+    font-weight: bold;
+}
+
+.clamp-text-2 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    line-clamp: 2; /* standard property (newer browsers) */
+}
